--- a/mailier/templates/mailier/base.html
+++ b/mailier/templates/mailier/base.html
@@ -31,16 +31,16 @@
     <h5 class="my-0 mr-md-auto font-weight-normal">Mailier_store</h5>
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailier:home' %}">Домой</a>
-        <a class="p-2 btn btn-outline-primary" href="">Контакты</a>
-        <a class="p-2 btn btn-outline-primary" href="">Каталог</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mailier:mailing_list' %}">Рассылки</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mailier:client_list' %}">Клиенты</a>
         <a class="p-2 btn btn-outline-primary" href="">Блог</a>
         </p>
         {% if user.is_authenticated %}
-        <a class="p-2 btn btn-outline-primary" href="">Мой профиль: <font color="green" size = '3'> {{user}}</font></a>
-            <a class="p-2 btn btn-outline-primary" href="">Выйти</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'user:profile' %}">Мой профиль: <font color="green" size = '3'> {{user}}</font></a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'user:logout' %}">Выйти</a>
         {% else %}
-            <a class="p-2 btn btn-outline-primary" href="">Войти</a>
-            <a class="p-2 btn btn-outline-primary" href="">Регистрация</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'user:login' %}">Войти</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'user:register' %}">Регистрация</a>
         {% endif %}
     </nav>
 </div>
