--- a/mailier/templates/mailier/mailing_form.html
+++ b/mailier/templates/mailier/mailing_form.html
@@ -11,7 +11,7 @@
             </div>
             <div class="card-body">
                 {{ form.as_p }}
-                <button type="submit" class="btn btn-primary">
+                 <button type="submit" class="btn btn-primary">
                     {% if object %}
                     Изменить
                     {% else %}
@@ -19,6 +19,21 @@
                     {% endif %}
                 </button>
                 <a href="{% url 'mailier:mailing_list' %}" class="btn btn-danger">Отмена</a>
+            </div>
+        </div>
+    </div>
+<form method="post" class="row">
+    {% csrf_token %}
+    <div class="col-md-6">
+        <div class="card mb-4 box-shadow">
+            <div class="card-header">
+                <h3>Тело рассылки</h3>
+            </div>
+             <div class="card-body">
+                {{ formset.management_form }}
+                {% for form in formset.forms %}
+                    {{form.as_p}}
+                {% endfor %}
             </div>
         </div>
     </div>
