--- a/mailier/templates/mailier/mailing_form.html
+++ b/mailier/templates/mailier/mailing_form.html
@@ -1,7 +1,6 @@
 {% extends 'mailier/base.html' %}
 {% block content%}
 
-
 <form method="post" class="row">
     {% csrf_token %}
     <div class="col-md-6">
@@ -11,28 +10,29 @@
             </div>
             <div class="card-body">
                 {{ form.as_p }}
-                 <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-primary">
                     {% if object %}
                     Изменить
                     {% else %}
                     Создать
                     {% endif %}
                 </button>
-                <a href="{% url 'mailier:mailing_list' %}" class="btn btn-danger">Отмена</a>
+                <a href="{% url 'mailier:mailing_list' %}" class="btn btn-warning">Отмена</a>
             </div>
         </div>
     </div>
-<form method="post" class="row">
-    {% csrf_token %}
     <div class="col-md-6">
         <div class="card mb-4 box-shadow">
             <div class="card-header">
-                <h3>Тело рассылки</h3>
+                <h3>Сообщения</h3>
             </div>
-             <div class="card-body">
+            <div class="card-body">
                 {{ formset.management_form }}
                 {% for form in formset.forms %}
-                    {{form.as_p}}
+                {{ form.as_p }}
+                {% if not forloop.last %}
+                <hr>
+                {% endif %}
                 {% endfor %}
             </div>
         </div>
