--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -97,7 +97,7 @@
 
       <article class="blog-post">
         <h2 class="blog-post-title">{{object.header}}</h2>
-        <p class="blog-post-meta">{{object.data_life }} by <a href="#">{{ User.email }}</a></p>
+        <p class="blog-post-meta">{{object.public_data }} by <a href="#">{{ user.email }}</a></p>
 
         <p>{{object.blog_content }}</p>
         <hr>
