--- a/mailier/templates/mailier/home.html
+++ b/mailier/templates/mailier/home.html
@@ -8,7 +8,7 @@
 
 <div class="container">
     <div class="row text-center">
-        <div class="col-3">
+        <div class="col-4">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">Еженедельная подписка</h4>
@@ -20,6 +20,27 @@
                         <li>- 50 клиентов </li>
                         <li>- 1 еженедельная рассылка </li>
                         <li>- 5 разовых рассылок</li>
+                    </ul>
+                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                </div>
+            </div>
+
+
+
+            <div class="card mb-4 box-shadow">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">Статистика</h4>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title pricing-card-title"></h1>
+                    <ul class="table">
+                        <tr>
+                        <td><h8>{{ mailing.object.all }}</h8></td>
+                        <li>- {{ mailing.object.all }} </li>
+                        <li>- 50 клиентов </li>
+                        <li>- 1 еженедельная рассылка </li>
+                        <li>- 5 разовых рассылок</li>
+
                     </ul>
                     <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
                 </div>
