--- a/mailier/templates/mailier/msg_form.html
+++ b/mailier/templates/mailier/msg_form.html
@@ -6,7 +6,7 @@
     <div class="col-md-6">
         <div class="card mb-4 box-shadow">
             <div class="card-header">
-                <h3>Настройки рассылки</h3>
+                <h3>Настройки шаблона рассылки</h3>
             </div>
             <div class="card-body">
                 {{ form.as_p }}
@@ -17,7 +17,7 @@
                     Создать
                     {% endif %}
                 </button>
-                <a href="{% url 'mailier:mailing_list' %}" class="btn btn-warning">Отмена</a>
+                <a href="{% url 'mailier:msg_list' %}" class="btn btn-warning">Отмена</a>
             </div>
         </div>
     </div>
